# findify-index-checker

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  shell.nix
src/: lib.rs  main.rs
src/protobuf/: indexSync.proto
src/scalapb/: README.md
