[package]
name = "findify-index-checker"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["full"] }
tokio-macros = { version = "2.3" }
bytes = "1.6.0"
prost = "0.13.1"
clap = { version = "^4", features = ["env", "derive"] }
pulsar = "6.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
futures = "0.3.30"
dyn-fmt = "0.4.0"

[build-dependencies]
prost-build = "0.13.1"
